fix firefox on mobile 2 scrollbars

--- a/src/containers/results/results.css
+++ b/src/containers/results/results.css
@@ -1,3 +1,8 @@
+body.no-scroll {
+  overflow:hidden;
+}
+
+
 .results {
   overflow-x:hidden;
   overflow-y:auto; 
